--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,23 @@
-@import "tailwindcss/preflight";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+/* src/app/globals.css */
+@import "@fontsource/inter";
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body {
+  font-family: 'Inter', sans-serif;
+}
+html, body {
+  height: 100%;
+  overflow: auto;
+}
+/* globals.css (optional) */
+html {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+
+
